--- a/src/styles.css
+++ b/src/styles.css
@@ -18,9 +18,16 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  h1 {
+    padding: 0 16px;
+  }
   /* For small screens, let's roll back the padding a bit. */
   #application {
-    padding: 0 8px;
+    padding: 0;
+  }
+
+  .sandbox {
+    padding: 0 16px;
   }
 }
 
@@ -112,8 +119,9 @@ li > a:hover {
 }
 
 .sandbox {
-  width: 100%;
   flex-wrap: wrap;
+  overflow: hidden;
+  height: 100%;
 
   .sandbox-container {
     margin-top: 1em;
@@ -192,6 +200,9 @@ li > a:hover {
     flex: 1 1 20%;
     background-color: white;
     border-radius: 3px;
+    overflow: auto;
+    height: 100%;
+    padding: 0 8px;
 
     .flex-style-container {
       display: flex;
