--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,30 @@
   --section-fade-in-length: 1.75s;
   --footer-fade-in-delay: 0.5s;
   --alt-background-color: #f0f0f0;
+  --background-color: #fffaf0;
+}
+
+html {
+  background-color: var(--background-color, white);
+  font-size: 100%;
+  font-family: sans-serif;
+}
+
+/* Monospace font for p tags, sans-serif for everything else */
+p {
+  font-family: monospace;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
 }
 
 body {
@@ -126,6 +150,7 @@ li > a:hover {
   .sandbox-container {
     margin-top: 1em;
     flex: 1 1 400px;
+    min-width: 0;
     position: relative;
 
     &:has(.sandbox-container-inner.flex-column) {
@@ -157,7 +182,7 @@ li > a:hover {
       width: 20px;
       height: 20px;
       position: absolute;
-      background-color: white;
+      background-color: var(--background-color);
       border-radius: 4px;
       border: 1px black solid;
       top: -10px;
@@ -171,7 +196,7 @@ li > a:hover {
     position: relative;
     height: 300px;
     padding: 0.25em;
-    background-color: white;
+    background-color: var(--background-color);
     border: 2px black solid;
     border-radius: 3px;
 
@@ -211,7 +236,7 @@ li > a:hover {
     flex-direction: column;
     gap: 1em;
     flex: 1 1 20%;
-    background-color: white;
+    background-color: var(--background-color);
     border-radius: 3px;
     overflow: auto;
     height: 100%;
